Add note re: IPv4 egress and Amazon VPC CNI

--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -38,6 +38,12 @@ The geeky details of what you get:
   details='Policy:Calico,IPAM:AWS,CNI:AWS,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
 />
 
+:::note
+
+When using the Amazon VPC CNI plugin, {{prodname}} does not support enforcement of network policy on IPv6 pods with `ENABLE_V4_EGRESS` set to `true`.
+
+:::
+
 
 1. First, create an Amazon EKS cluster.
 
@@ -68,14 +74,14 @@ The geeky details of what you get:
    EOF
    ```
 
-1. Confirm installation by checking the `STATUS`, your cluster nodes should have a `Ready` status. 
+1. Confirm installation by checking the `STATUS`, your cluster nodes should have a `Ready` status.
 
    ```
    kubectl get nodes -o wide
    ```
-   
+
    It should return something like the following.
-   
+
    ```
    NAME              STATUS   ROLES    AGE   VERSION   INTERNAL-IP   EXTERNAL-IP   OS-IMAGE             KERNEL-VERSION    CONTAINER-RUNTIME
    <your-hostname>   Ready    master   52m   v1.12.2   10.128.0.28   <none>        Ubuntu 18.04.1 LTS   4.15.0-1023-gcp   docker://18.6.1
