Added release notes for v3.18.5

--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -251,9 +251,11 @@ Calico Enterprise 3.18.5 is now available. This release includes bug fixes and i
 
 #### Bug fixes
 
-* one
-* two
-* three
+* Fix that Felix would panic when trying to resync a temporary IP set. Temporary IP sets are created in certain scenarios after previous failures.
+* Fix excessive CPU usage in the process name lookup cache if a PID was unknown.
+* Updates the default behaviour of list request without tier field selector or label selector on globalnetworkpolicy, stagedglobalnetworkpolicy, networkpolicy and staged network policy to return all policies available to user, instead of returning only the policies in the default tier. This change allows to manage policies with GitOps tools like ArgoCD.
+* Fix Felix panic when using non-default BPF map sizes.  Size was not updated in all places resulting in failure to attach programs.
+* Security updates.
 
 #### Updating
 
