Undo global component: ReqsSys
working

--- a/calico-enterprise/getting-started/install-on-clusters/requirements.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review requirements to install Calico Enterprise networking and network policy.
 ---
 
+import ReqsSys from "@site/calico-enterprise/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='Kubernetes' />
