--- a/calico/getting-started/kubernetes/requirements.mdx
+++ b/calico/getting-started/kubernetes/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review requirements before installing Calico to ensure success.
 ---
 
+import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+
 # System requirements
 
 <ReqsSys orch='Kubernetes' />
