--- a/calico_versioned_docs/version-3.26/getting-started/kubernetes/openshift/requirements.mdx
+++ b/calico_versioned_docs/version-3.26/getting-started/kubernetes/openshift/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review the requirements for using OpenShift with Calico.
 ---
 
+import ReqsSys from "@site/calico_versioned_docs/version-3.26/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='OpenShift' />
