--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/openshift/requirements.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/openshift/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review requirements for using OpenShift with Calico Enterprise.
 ---
 
+import ReqsSys from "@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/ReqsSys";
+
 # System requirements
 
 ## OpenShift requirements
