--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/requirements.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review requirements to install Calico Enterprise networking and network policy.
 ---
 
+import ReqsSys from "@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='Kubernetes' />
