--- a/calico/getting-started/bare-metal/requirements.mdx
+++ b/calico/getting-started/bare-metal/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review node requirements for installing Calico.
 ---
 
+import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+
 # System requirements
 
 <ReqsSys orch='host protection' />
