--- a/calico/getting-started/kubernetes/openshift/requirements.mdx
+++ b/calico/getting-started/kubernetes/openshift/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review the requirements for using OpenShift with Calico.
 ---
 
+import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+
 # System requirements
 
 <ReqsSys orch='OpenShift' />
