--- a/calico/getting-started/openstack/requirements.mdx
+++ b/calico/getting-started/openstack/requirements.mdx
@@ -2,6 +2,8 @@
 description: Requirements for installing Calico on OpenStack nodes.
 ---
 
+import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+
 # System requirements
 
 <ReqsSys orch='OpenStack' />
