--- a/calico_versioned_docs/version-3.27/getting-started/bare-metal/requirements.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/bare-metal/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review node requirements for installing Calico.
 ---
 
+import ReqsSys from "@site/calico_versioned_docs/version-3.27/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='host protection' />
