--- a/calico_versioned_docs/version-3.28/getting-started/kubernetes/requirements.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/kubernetes/requirements.mdx
@@ -2,6 +2,8 @@
 description: Review requirements before installing Calico to ensure success.
 ---
 
+import ReqsSys from "@site/calico_versioned_docs/version-3.28/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='Kubernetes' />
