--- a/calico_versioned_docs/version-3.28/getting-started/openstack/requirements.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/openstack/requirements.mdx
@@ -2,6 +2,8 @@
 description: Requirements for installing Calico on OpenStack nodes.
 ---
 
+import ReqsSys from "@site/calico_versioned_docs/version-3.28/_includes/components/ReqsSys";
+
 # System requirements
 
 <ReqsSys orch='OpenStack' />
