--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -40,6 +40,11 @@ The geeky details of what you get:
 
 To enable {{prodname}} network policy enforcement on an EKS cluster using the AWS VPC CNI plugin, follow these step-by-step instructions: [Installing Calico on Amazon EKS](https://docs.aws.amazon.com/eks/latest/userguide/calico.html)
 
+:::note
+
+When using the Amazon VPC CNI plugin, {{prodname}} does not support enforcement of network policy on IPv6 pods with `ENABLE_V4_EGRESS` set to `true`.
+
+:::
 
 1. First, create an Amazon EKS cluster.
 
@@ -70,14 +75,14 @@ To enable {{prodname}} network policy enforcement on an EKS cluster using the AW
    EOF
    ```
 
-1. Confirm installation by checking the `STATUS`, your cluster nodes should have a `Ready` status. 
+1. Confirm installation by checking the `STATUS`, your cluster nodes should have a `Ready` status.
 
    ```
    kubectl get nodes -o wide
    ```
-   
+
    It should return something like the following.
-   
+
    ```
    NAME              STATUS   ROLES    AGE   VERSION   INTERNAL-IP   EXTERNAL-IP   OS-IMAGE             KERNEL-VERSION    CONTAINER-RUNTIME
    <your-hostname>   Ready    master   52m   v1.12.2   10.128.0.28   <none>        Ubuntu 18.04.1 LTS   4.15.0-1023-gcp   docker://18.6.1
