--- a/calico/getting-started/kubernetes/nftables.mdx
+++ b/calico/getting-started/kubernetes/nftables.mdx
@@ -3,7 +3,11 @@ description: Install Calico using the tech-preview nftables data plane.
 ---
 
 # Calico nftables data plane
+:::note
 
+This feature is tech preview. Tech preview features may be subject to significant changes before they become GA.
+
+:::
 ## Big picture
 
 Try the tech-preview {{prodname}} nftables data plane.
