--- a/calico-cloud_versioned_docs/version-19-2/network-policy/beginners/calico-network-policy.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/network-policy/beginners/calico-network-policy.mdx
@@ -226,10 +226,10 @@ In the following example, incoming TCP traffic to an application is denied, and 
 ```yaml
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
-Metadata:
+metadata:
   name: allow-tcp-port-6379
   namespace: production
-Spec:
+spec:
   selector: role == 'database'
   types:
     - Ingress
