--- a/calico_versioned_docs/version-3.27/network-policy/get-started/calico-policy/calico-network-policy.mdx
+++ b/calico_versioned_docs/version-3.27/network-policy/get-started/calico-policy/calico-network-policy.mdx
@@ -228,10 +228,10 @@ In the following example, incoming TCP traffic to an application is denied, and 
 ```yaml
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
-Metadata:
+metadata:
   name: allow-tcp-6379
   namespace: production
-Spec:
+spec:
   selector: role == 'database'
   types:
     - Ingress
