--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -2,6 +2,8 @@
 description: Upgrade to a newer version of Calico Enterprise installed with OpenShift.
 ---
 
+import OpenShiftPrometheusOperator from '@site/calico-enterprise_versioned_docs/version-3.17/_includes/components/OpenShiftPrometheusOperator';
+
 # Upgrade Calico Enterprise installed with OpenShift
 
 :::note
