--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -2,6 +2,8 @@
 description: Steps to upgrade from open source Calico to Calico Enterprise on OpenShift.
 ---
 
+import OpenShiftPrometheusOperator from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/OpenShiftPrometheusOperator';
+
 # Upgrade from Calico to Calico Enterprise on OpenShift
 
 ## Prerequisites
