Undo global component: OpenShiftPullSecret

--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -3,6 +3,7 @@ description: Steps to upgrade from open source Calico to Calico Enterprise on Op
 ---
 
 import OpenShiftPrometheusOperator from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/OpenShiftPrometheusOperator';
+import OpenShiftPullSecret from '@site/calico-enterprise_versioned_docs/version-3.20-1/_includes/components/OpenShiftPullSecret';
 
 # Upgrade from Calico to Calico Enterprise on OpenShift
 
