--- a/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -3,7 +3,7 @@ description: Steps to upgrade from open source Calico to Calico Enterprise on Op
 ---
 
 import InstallOpenShiftManifestsTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/InstallOpenShiftManifests-temp';
-import OpenShiftPullSecretTemp from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components-temp/OpenShiftPullSecret-temp';
+import OpenShiftPullSecret from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/OpenShiftPullSecret';
 import OpenShiftPrometheusOperator from '@site/calico-enterprise_versioned_docs/version-3.19-2/_includes/components/OpenShiftPrometheusOperator';
 
 # Upgrade from Calico to Calico Enterprise on OpenShift
@@ -46,7 +46,7 @@ mkdir manifests
 
 **Add an image pull secret**
 
-<OpenShiftPullSecretTemp />
+<OpenShiftPullSecret />
 
 > (Optional) If your cluster architecture requires any custom [{{prodname}} resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).
 
