[AWS] Document conflict with aws cni policies.

--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -87,6 +87,11 @@ When using the Amazon VPC CNI plugin, {{prodname}} does not support enforcement 
    <your-hostname>   Ready    master   52m   v1.12.2   10.128.0.28   <none>        Ubuntu 18.04.1 LTS   4.15.0-1023-gcp   docker://18.6.1
    ```
 
+:::note
+
+Since Amazon VPC CNI version 1.14 the CNI itself implements policies (in eBPF). This is not compatible with {{prodname}} network policy enforcement.
+The [Amazon VPC CNI polices](https://docs.aws.amazon.com/eks/latest/userguide/cni-network-policy.html) must be disabled, otherwise {{prodname}} network policy enforcement would have undefined behaviour if Kubernetes policies are used as well.
+
 ### Install EKS with {{prodname}} networking
 
 The geeky details of what you get:
