--- a/calico-enterprise/getting-started/bare-metal/requirements.mdx
+++ b/calico-enterprise/getting-started/bare-metal/requirements.mdx
@@ -3,6 +3,7 @@ description: Review node requirements for installing Calico Enterprise on non-cl
 ---
 
 import ReqsSys from "@site/calico-enterprise/_includes/components/ReqsSys";
+import ReqsKernel from '@site/calico-enterprise/_includes/components/ReqsSys';
 
 # System requirements
 
