--- a/calico-enterprise/getting-started/install-on-clusters/openshift/requirements.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/requirements.mdx
@@ -3,6 +3,7 @@ description: Review requirements for using OpenShift with Calico Enterprise.
 ---
 
 import ReqsSys from "@site/calico-enterprise/_includes/components/ReqsSys";
+import ReqsKernel from '@site/calico-enterprise/_includes/components/ReqsSys';
 
 # System requirements
 
