--- a/calico/getting-started/bare-metal/requirements.mdx
+++ b/calico/getting-started/bare-metal/requirements.mdx
@@ -3,6 +3,7 @@ description: Review node requirements for installing Calico.
 ---
 
 import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+import ReqsKernel from '@site/calico/_includes/components/ReqsSys';
 
 # System requirements
 
