--- a/calico/getting-started/kubernetes/requirements.mdx
+++ b/calico/getting-started/kubernetes/requirements.mdx
@@ -3,6 +3,7 @@ description: Review requirements before installing Calico to ensure success.
 ---
 
 import ReqsSys from '@site/calico/_includes/components/ReqsSys';
+import ReqsKernel from '@site/calico/_includes/components/ReqsSys';
 
 # System requirements
 
