--- a/calico_versioned_docs/version-3.27/getting-started/bare-metal/requirements.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/bare-metal/requirements.mdx
@@ -3,6 +3,7 @@ description: Review node requirements for installing Calico.
 ---
 
 import ReqsSys from "@site/calico_versioned_docs/version-3.27/_includes/components/ReqsSys";
+import ReqsKernel from "@site/calico_versioned_docs/version-3.27/_includes/components/ReqsKernel";
 
 # System requirements
 
