--- a/calico_versioned_docs/version-3.27/getting-started/kubernetes/openshift/requirements.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/kubernetes/openshift/requirements.mdx
@@ -3,6 +3,7 @@ description: Review the requirements for using OpenShift with Calico.
 ---
 
 import ReqsSys from "@site/calico_versioned_docs/version-3.27/_includes/components/ReqsSys";
+import ReqsKernel from "@site/calico_versioned_docs/version-3.27/_includes/components/ReqsKernel";
 
 # System requirements
 
