--- a/calico_versioned_docs/version-3.28/getting-started/bare-metal/requirements.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/bare-metal/requirements.mdx
@@ -3,6 +3,8 @@ description: Review node requirements for installing Calico.
 ---
 
 import ReqsSys from "@site/calico_versioned_docs/version-3.28/_includes/components/ReqsSys";
+import ReqsKernel from "@site/calico_versioned_docs/version-3.28/_includes/components/ReqsKernel";
+
 
 # System requirements
 
